[gd_scene load_steps=8 format=3 uid="uid://bbumsja2jwtyt"]

[ext_resource type="Script" path="res://scenes/enemies/termite_alate.gd" id="1_p2glw"]
[ext_resource type="Shape2D" uid="uid://bvv6wfe5a5vmo" path="res://scenes/enemies/termite_alate_shape.tres" id="2_4kggq"]
[ext_resource type="Texture2D" uid="uid://co01gstpumt0c" path="res://icon.svg" id="2_6auae"]
[ext_resource type="PackedScene" uid="uid://bqa4jle60cl0a" path="res://scenes/entity_composition/velocity_component.tscn" id="2_kiu7a"]
[ext_resource type="Script" path="res://scenes/entity_composition/hurt_box.gd" id="3_13q4d"]
[ext_resource type="Script" path="res://scenes/entity_composition/health_component.gd" id="4_g3oxt"]
[ext_resource type="Script" path="res://scenes/entity_composition/path_finder.gd" id="7_nwrww"]

[node name="TermiteAlate" type="CharacterBody2D" node_paths=PackedStringArray("velocity_component", "path_finder")]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_p2glw")
velocity_component = NodePath("VelocityComponent")
path_finder = NodePath("PathFinder")

[node name="VelocityComponent" parent="." instance=ExtResource("2_kiu7a")]
fly_speed = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("2_4kggq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.00001, 3.8147e-06)
scale = Vector2(0.382813, 0.40625)
texture = ExtResource("2_6auae")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 128
collision_mask = 32
script = ExtResource("3_13q4d")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = ExtResource("2_4kggq")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_g3oxt")

[node name="PathFinder" type="Node2D" parent="."]
script = ExtResource("7_nwrww")

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
